[package]
name = "dds-bridge-sys"
version = "2.0.3"
authors = ["Chen-Pang He (https://jdh8.org)"]
edition = "2021"
description = "Generated bindings to DDS, the double dummy solver for bridge"
repository = "https://github.com/jdh8/dds-bridge-sys"
license = "Apache-2.0"
categories = ["game-development", "external-ffi-bindings", "no-std"]
keywords = ["bridge", "double-dummy"]
exclude = ["/vendor/hands", "/vendor/doc"]

[build-dependencies]
anyhow = "1.0.95"
bindgen = "0.71.1"
cc = { version = "1.2.13", features = ["parallel"] }
glob = "0.3.2"

[profile.dev]
opt-level = 3

[dev-dependencies]
once_cell = "1.20.3"
