[package]
name = "dds-bridge-sys"
version = "2.0.5"
authors = ["Chen-Pang He (https://jdh8.org)"]
edition = "2024"
rust-version = "1.85"
description = "Generated bindings to DDS, the double dummy solver for bridge"
repository = "https://github.com/jdh8/dds-bridge-sys"
homepage = "https://github.com/jdh8/dds-bridge-sys"
documentation = "https://docs.rs/dds-bridge-sys"
readme = "README.md"
license = "Apache-2.0"
categories = ["game-development", "external-ffi-bindings", "no-std"]
keywords = ["bridge", "double-dummy"]
exclude = ["/vendor/hands", "/vendor/doc"]

[build-dependencies]
anyhow = "1"
bindgen = "0.72"
cc = { version = "1", features = ["parallel"] }
glob = "0.3"

[profile.dev]
opt-level = 3

[dev-dependencies]
parking_lot = "0.12.5"
